--- a/htmls files/Circular World.html
+++ b/htmls files/Circular World.html
@@ -26,12 +26,12 @@
       </div>
       <div class="navlist3">
         <ul class="listclick3">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Circular World.html">Circular World</a></li>
-          <li><a href="digital.html">Digital Journey</a></li>
-          <li><a href="elec.html">Electric Future</a></li>
-          <li><a href="fre.html">Freude</a></li>
-          <li><a href="index.html">Models</a></li>
+          <li><a href="../htmls files/index.html">Home</a></li>
+          <li><a href="../htmls files/Circular World.html ">Circular World</a></li>
+          <li><a href="../htmls files/digital.html">Digital Journey</a></li>
+          <li><a href="../htmls files/elec.html">Electric Future</a></li>
+          <li><a href="../htmls files/fre.html">Freude</a></li>
+          <li><a href="../htmls files/index.html">Models</a></li>
         </ul>
       </div>
       <div class="serch-icon3">
