--- a/htmls files/fre.html
+++ b/htmls files/fre.html
@@ -25,12 +25,12 @@
       </div>
       <div class="nav-list">
         <ul class="listclick">
-          <li><a href="../htmls files/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="../htmls files/Circular World.html">Circular World</a></li>
           <li><a href="../htmls files/digital.html">Digital Journey</a></li>
           <li><a href="../htmls files/elec.html">Electric Future</a></li>
           <li><a href="../htmls files/fre.html">Freude</a></li>
-          <li><a href="../htmls files/index.html">Models</a></li>
+          <li><a href="index.html">Models</a></li>
         </ul>
       </div>
       <div class="serch-icon">
