--- a/htmls files/digital.html
+++ b/htmls files/digital.html
@@ -20,19 +20,19 @@
     <!-- navbar -->
     <div class="navbar3">
       <div class="logo3">
-        <a href="index.html"> <img src="../logo/logo-bmw-com-gray.svg" alt="logo" /></a>
+        <a href="../index.html"> <img src="../logo/logo-bmw-com-gray.svg" alt="logo" /></a>
         <div class="text">
           <p class="textlogo">Sheer Driving <span>Pleasure</span></p>
         </div>
       </div>
       <div class="navlist3">
         <ul class="listclick3">
-          <li><a href=".../index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../htmls files/Circular World.html ">Circular World</a></li>
           <li><a href="../htmls files/digital.html">Digital Journey</a></li>
           <li><a href="../htmls files/elec.html">Electric Future</a></li>
           <li><a href="../htmls files/fre.html">Freude</a></li>
-          <li><a href="index.html">Models</a></li>
+          <li><a href="../index.html">Models</a></li>
         </ul>
       </div>
       <div class="serch-icon3">
@@ -236,6 +236,93 @@
           <p class="future">Arnold Schwarzenegger and the BMW i Vision Dee </p></div>
     </p>
     </div>
+
+
+<section class="digital-journey">
+  <div class="cards">
+    <div class="box-one">
+      <img src="../assets/image6.webp" >
+      <p class="tag">50 years of Designworks</p>
+      <h3 class="ages-sec">Designworks – innovation<br>through the ages</h3>
+
+  </div>
+    <div class="card">
+   <video src="../videos/v13.mp4" autoplay muted loop width="390px"></video>
+      <p class="tag">Future of Tech</p>
+      <h3  class="ages-sec">Experience the technology<br>of the future today:<br>Flexibility</h3>
+    </div>
+
+    <div class="card">
+         <video src="../videos/v14.mp4" autoplay muted loop width="390px"></video>
+         
+      <p class="tag">Future of Tech</p>
+      <h3  class="ages-sec">Experience the technology<br>of the future today:<br>Entertainment</h3>
+    </div>
+
+  </div>
+
+  <div class="btn-wrapper">
+    <button class="show-more">Show more</button>
+  </div>
+</section>
+
+
+
+<footer class="bmw-footer">
+  <div class="footer-languages">
+    <a href="#" class="active">English</a>
+    <a href="#">Deutsch</a>
+    <a href="#">Italiano</a>
+    <a href="#">Français</a>
+    <a href="#">Español</a>
+    <a href="#">日本語</a>
+  </div>
+
+  <div class="footer-columns">
+    <div class="footer-col">
+      <h4>Quick Links</h4>
+      <a href="#">Home</a>
+      <a href="#">BMW in your country</a>
+      <a href="#">BMW Group Careers</a>
+      <a href="#">EU Detergents Regulation</a>
+      <a href="#">REACH Regulation</a>
+      <a href="#">Compatibility Check</a>
+      <a href="#">Recalls and Technical Updates</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>More BMW Websites</h4>
+      <a href="#">BMW M</a>
+      <a href="#">BMW M Motorsport</a>
+      <a href="#">BMW Golfsport</a>
+      <a href="#">BMW Welt</a>
+      <a href="#">BMW Group</a>
+      <a href="#">BMW ConnectedDrive</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>BMW.com</h4>
+      <a href="#">About BMW.com</a>
+      <a href="#">Contact</a>
+      <a href="#">Cookies</a>
+      <a href="#">Imprint</a>
+      <a href="#">Legal Notice / Data protection</a>
+      <a href="#">Accessibility</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>Visit us on</h4>
+      <a href="#">Facebook</a>
+      <a href="#">X</a>
+      <a href="#">Instagram</a>
+      <a href="#">YouTube</a>
+    </div>
+  </div>
+  <div class="site-footer">
+  <p>© BMW AG 2025</p>
+</div>
+</footer>
+
     <!--  -->
 <!--     
 <div class="video-grid">
