add show button and footer

--- a/htmls files/fre.html
+++ b/htmls files/fre.html
@@ -19,7 +19,7 @@
   <!-- navbar -->
     <div class="navbar4">
       <div class="logo4">
-        <a href="index.html">
+        <a href="../index.html">
         <img src="../logo/logo-bmw-com-gray.svg" alt="logo"/></a>
         <div class="text">
           <p class="textlogo">Sheer Driving <span>Pleasure</span></p>
@@ -27,12 +27,12 @@
       </div>
       <div class="nav-list">
         <ul class="listclick">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../htmls files/Circular World.html">Circular World</a></li>
           <li><a href="../htmls files/digital.html">Digital Journey</a></li>
           <li><a href="../htmls files/elec.html">Electric Future</a></li>
           <li><a href="../htmls files/fre.html">Freude</a></li>
-          <li><a href="index.html">Models</a></li>
+          <li><a href="../index.html">Models</a></li>
         </ul>
       </div>
       <div class="serch-icon">
@@ -162,7 +162,7 @@
     <!-- Card 1 -->
     <div class="bmw-card">
       <div class="bmw-card-img">
-        <img src="../assets/image13.jpg" alt="BMW Electric">
+        <img src="../assets/image 10.webp" alt="BMW Electric">
       </div>
       <div class="bmw-card-text">
         <p class="image-sound">Norway road trip</p>
@@ -175,12 +175,12 @@
     <!-- Card 2 -->
     <div class="bmw-card">
       <div class="bmw-card-img">
-        <img src="../assets/image14.webp" alt="BMW Sound">
+        <img src="../assets/image 20.webp" alt="BMW Sound">
       </div>
       <div class="bmw-card-text">
-        <p class="image-sound">Electrifying sound</p>
+        <p class="image-sound">BMW Skytop</p>
         <h3 class="image-text">
-          How BMW composes the score for electric driving pleasure
+       The magic of exclusive <br>moments
         </h3>
       </div>
     </div>
@@ -191,15 +191,134 @@
         <img src="../assets/image15.webp" alt="BMW Passengers">
       </div>
       <div class="bmw-card-text">
-        <p class="image-sound">Electrifying passengers</p>
+        <p class="image-sound">25-year anniversary</p>
         <h3 class="image-text">
-          Supercar Blondie takes an electric ride with Hans Zimmer
+        The BMW X5 through the <br> ages
         </h3>
       </div>
     </div>
   </div>
 </section>
 </div>
+<!--  -->
+  <div class="main-grid">
+<div class="section-grid">
+     <div class="card">
+            <div class="media-box">
+                <img src="../assets/image21.jpg">
+            </div>
+            <div class="content">
+                <span class="category-label">Art and speed</span>
+                <h2 class="main-title">Hervé Poulain – the visionary behind the BMW Art Car</h2>
+            </div>
+        </div>
+        <div class="card">
+            <div class="media-box">
+            </div>
+            <div class="content">
+                <span class="category-label">BMW Welt, BMW Museum, and BMW M Driving Academy</span>
+                <h2 class="main-title">BMW Munich Experience</h2>
+            </div>
+        </div>
+   
+</div>
+<!--  -->
+
+<div class="shadow-ca-box">
+   <div class="img-box-five">
+  <img src="../assets/image23.jpg" >
+</div>
+<div class="four-text-contenor">
+    <p class="firttextv">
+      <div class="right">
+         <h3 class="neue5">BMW Concept Skytop</h3>
+          <p class="future5">The fusion of tradition and modernity</p></div>
+    </p>
+    </div></div>
+    
+ <section class="digital-journey">
+  <div class="cards">
+    <div class="box-one">
+      <img src="../assets/image25.jpg" >
+      <p class="tag">BMW M x LEGO®</p>
+      <h3 class="ages-sec">Attention to detail comes in a double pack</h3>
+
+  </div>
+    <div class="card">
+   <video src="../videos/v29.mp4" autoplay muted loop width="390px"></video>
+      <p class="tag">Sustainability</p>
+      <h3  class="ages-sec">Roderick Pijls: kitesurfing at  <br> one with the elements</h3>
+    </div>
+
+    <div class="card">
+         <video src="../videos/v30.mp4" autoplay muted loop width="390px"></video>
+         
+      <p class="tag">The future is bright</p>
+      <h3  class="ages-sec">The pioneering light concept <br> of the BMW Vision Neue<br>Klasse</h3>
+    </div>
+  </div> 
+  <!--  -->
+  
+  <div class="btn-wrapper">
+    <button class="show-more">Show more</button>
+  </div>
+</section>
+
+
+<footer class="bmw-footer">
+  <div class="footer-languages">
+    <a href="#" class="active">English</a>
+    <a href="#">Deutsch</a>
+    <a href="#">Italiano</a>
+    <a href="#">Français</a>
+    <a href="#">Español</a>
+    <a href="#">日本語</a>
+  </div>
+
+  <div class="footer-columns">
+    <div class="footer-col">
+      <h4>Quick Links</h4>
+      <a href="#">Home</a>
+      <a href="#">BMW in your country</a>
+      <a href="#">BMW Group Careers</a>
+      <a href="#">EU Detergents Regulation</a>
+      <a href="#">REACH Regulation</a>
+      <a href="#">Compatibility Check</a>
+      <a href="#">Recalls and Technical Updates</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>More BMW Websites</h4>
+      <a href="#">BMW M</a>
+      <a href="#">BMW M Motorsport</a>
+      <a href="#">BMW Golfsport</a>
+      <a href="#">BMW Welt</a>
+      <a href="#">BMW Group</a>
+      <a href="#">BMW ConnectedDrive</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>BMW.com</h4>
+      <a href="#">About BMW.com</a>
+      <a href="#">Contact</a>
+      <a href="#">Cookies</a>
+      <a href="#">Imprint</a>
+      <a href="#">Legal Notice / Data protection</a>
+      <a href="#">Accessibility</a>
+    </div>
+
+    <div class="footer-col">
+      <h4>Visit us on</h4>
+      <a href="#">Facebook</a>
+      <a href="#">X</a>
+      <a href="#">Instagram</a>
+      <a href="#">YouTube</a>
+    </div>
+  </div>
+  <div class="site-footer">
+  <p>© BMW AG 2026</p>
+</div>
+</footer>
 </body>
  
 </html>
