--- a/htmls files/digital.html
+++ b/htmls files/digital.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digital Journey</title>
+    <title>Digital Journey | BMW.com </title>
     <link rel="stylesheet" href="../css files/style3.css" />
 
     <link rel="shortcut icon" href="../logo/logo-bmw-com-gray.svg" type="image/x-icon">
@@ -154,7 +154,6 @@
         </div>
     </div>
 
-<!--  -->
   <div class="img-box-four">
   <img src="../assets/image3.webp" alt="BMW Car">
 </div>
@@ -224,7 +223,6 @@
             </div>
         </div>
     </div>
-    <!--  -->
       <div class="img-box-four">
   <img src="../assets/image5.webp" >
 </div>
@@ -235,9 +233,6 @@
           <p class="future">Arnold Schwarzenegger and the BMW i Vision Dee </p></div>
     </p>
     </div>
-
-<!--  -->
-
 <section class="digital-journey">
   <div class="cards">
     <div class="box-one">
@@ -265,8 +260,6 @@
     <button class="show-more">Show more</button>
   </div>
 </section>
-
-
 
 <footer class="bmw-footer">
   <div class="footer-languages">
