last work update

--- a/index.html
+++ b/index.html
@@ -1,64 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMW.com | The international BMW Website</title>
-    <link rel="stylesheet" href="../css files/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-<link rel="shortcut icon" href="../logo/logo-bmw-com-gray.svg" type="image/x-icon">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BMW.com | The international BMW Website</title>
+  <link rel="stylesheet" href="../css files/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="shortcut icon" href="../logo/logo-bmw-com-gray.svg" type="image/x-icon">
+</head>
 
-
-  </head>
-  <body>
-    <!-- navbar -->
-    <div class="navbar">
-      <div class="logo">
-        <a href="index.html">
-        <img src="../logo/logo-bmw-com-gray.svg" alt="logo"/></a>
-        <div class="text">
-          <p class="textlogo3">Sheer Driving <span>Pleasure</span></p>
-        </div>
-      </div>
-      <div class="nav-list">
-        <ul class="listclick">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../htmls files/Circular World.html">Circular World</a></li>
-          <li><a href="../htmls files/digital.html">Digital Journey</a></li>
-          <li><a href="../htmls files/elec.html">Electric Future</a></li>
-          <li><a href="../htmls files/fre.html">Freude</a></li>
-          <li><a href="../index.html">Models</a></li>
-        </ul>
-      </div>
-      <div class="serch-icon">
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </div>
-      <div class="menu"><i class="fa-solid fa-list"></i></div>
-    </div>
-    <!-- navbar end -->
-
-    <!-- hero section -->
-    <div class="contant">
-      <div class="info">
-        <div class="leftcont">
-          <h3 class="inside">Inside Neue Klasse</h3>
-          <p class="videotext">A video Series with <br> people at BMW shaping <br>the future</p>
-          <button>Reod more <i class="fa fa-arrow-right"></i></button>
-        </div>
-      </div>
-        <div class="rightcont">
-          <video
-            src="../videos/inkvp-00-teaser-hd.mp4" loop autoplay width="750px"></video>
-        </div>
+<body>
+  <!-- navbar -->
+  <div class="navbar">
+    <div class="logo">
+      <a href="index.html">
+        <img src="../logo/logo-bmw-com-gray.svg" alt="logo" /></a>
+      <div class="text">
+        <p class="textlogo3">Sheer Driving <span>Pleasure</span></p>
       </div>
     </div>
-    <!-- end -->
-  </body>
+    <div class="nav-list">
+      <ul class="listclick">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../htmls files/Circular World.html">Circular World</a></li>
+        <li><a href="../htmls files/digital.html">Digital Journey</a></li>
+        <li><a href="../htmls files/elec.html">Electric Future</a></li>
+        <li><a href="../htmls files/fre.html">Freude</a></li>
+        <li><a href="../index.html">Models</a></li>
+      </ul>
+    </div>
+    <div class="serch-icon">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </div>
+    <div class="menu"><i class="fa-solid fa-list"></i></div>
+  </div>
+  <!-- navbar end -->
+  <!-- hero section -->
+  <div class="contant">
+    <div class="info">
+      <div class="leftcont">
+        <h3 class="inside">Inside Neue Klasse</h3>
+        <p class="videotext">A video Series with <br> people at BMW shaping <br>the future</p>
+        <button>Reod more <i class="fa fa-arrow-right"></i></button>
+      </div>
+    </div>
+    <div class="rightcont">
+      <video src="../videos/inkvp-00-teaser-hd.mp4" loop autoplay width="750px"></video>
+    </div>
+  </div>
+  </div>
+  <!-- end -->
+</body>
+
 </html>
